# oligoMass

./: .gitignore  README.md  README.rst  setup.cfg  setup.py
oligoMass/: dna.py  exModifications.py  external_mods.csv  molmassOligo.py  requirements.txt
oligoMass.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
