#[metadata]
#name = oligoMass
#version = 0.0.2
#author = a1exsan
#author_email = fominsan@gmail.com
#description = Oligonucleotides properties calculation packege
#long_description = file: README.md
#long_description_content_type = oligoMass
#url = https://github.com/a1exsan/oligoMass
##project_urls =
##    Bug Tracker = https://github.com/pypa/sampleproject/issues
##classifiers =
##    Programming Language :: Python :: 3
##    License :: OSI Approved :: MIT License
##    Operating System :: OS Independent

#[options]
#package_dir =
#    = src
#packages = find:
#python_requires = >=3.6

#[options.packages.find]
#where = src